# xajslfjag

./: -o  .gitignore  ANTLR4_库文件大小分析报告.md  ANTLR4库同步修复报告.md  CHTL_ANTLR4完整集成报告.md  CHTL_COMPLETION_REPORT.md  CHTL_FINAL_COMPLETION_REPORT.md  CHTL_FINAL_PROJECT_COMPLETION_REPORT.md  CHTL_IMPLEMENTATION_SUMMARY.md  CHTL_PROJECT_COMPLETION_REPORT.md  CHTL_SPA支持说明.md  CHTL_SYNTAX_IMPLEMENTATION_REPORT.md  CHTL_全面实现最终完成报告.md  CHTL_完整实现完成报告.md  CHTL_完整实现最终确认报告.md  CHTL_实现完整性最终确认报告.md  CHTL_开发者流程测试完成报告.md  CHTL_当前状态与重构需求总结.md  CHTL_最终发布状态确认.md  CHTL_最终诚实确认报告.md  CHTL_最终质量验证报告.md  CHTL_标准结构重构完成报告.md  CHTL_模块系统结构分析报告.md  CHTL_真实状态最终确认.md  CHTL_短期目标完全实现总结报告.md  CHTL_规范符合性审查报告.md  CHTL_项目修正总结.md  CHTL_项目完成总结.md  CHTL_项目最终完成总结.md  CHTL_项目标准结构重构完成总结.md  CHTL_项目结构重构计划.md  CHTL_项目自动执行完成总结.md  CHTL语法文档.md  CHTL项目进度全面评估报告.md  CHTL项目进度报告.md  CHTL项目重建进度报告.md  CJMOD_API_设计失败承认.md  CJMOD_功能详细说明.md  CJMOD_正确工作机制说明.md  CJMOD_运行时系统实现报告.md  (+260 more)
CHTL/: CHTL.cpp  CHTL.h  CMakeLists.txt  CSSCompiler.h  CompileTimeListener.h  CompilerDispatcher.h  Context.h  JSCompiler.h  Lexer.h  Makefile  README.md  SyntaxConstrainer.h  Token.h  build.sh  core  main.cpp  simple.chtl  test.chtl  test_basic  test_basic.cpp  test_state_context  test_state_context.cpp
CHTL JS/: CMakeLists.txt
CHTL JS/CHTLJSContext/: CHTLJSContext.cpp  CHTLJSContext.h  CHTLJSIOStream.cpp  CHTLJSIOStream.h  CMakeLists.txt
CHTL JS/CHTLJSGenerator/: CHTLJSGenerator.cpp  CHTLJSGenerator.h  CMakeLists.txt
CHTL JS/CHTLJSLexer/: CHTLJSLexer.cpp  CHTLJSLexer.h  CHTLJSToken.cpp  CHTLJSToken.h  CMakeLists.txt
CHTL JS/CHTLJSLoader/: CMakeLists.txt
CHTL JS/CHTLJSManage/: CMakeLists.txt
CHTL JS/CHTLJSNode/: AST.h  CHTLJSBaseNode.h  CHTLJSNode.h  CMakeLists.txt
CHTL JS/CHTLJSParser/: CHTLJSParser.cpp  CHTLJSParser.h  CMakeLists.txt
CHTL JS/CHTLJSState/: CHTLJSState.h  CMakeLists.txt
CHTL JS/CJMODSystem/: CJMODSystem.h  CMakeLists.txt
CHTL/CHTL/: CHTLCompiler.cpp  CHTLCompiler.h  CHTLContext.cpp  CHTLContext.h  CHTLGenerator.cpp  CHTLGenerator.h  CHTLParser.cpp  CHTLParser.h  CHTLParser_Import.cpp  CHTLParser_Template.cpp  CMakeLists.txt  Token.h
CHTL/CHTLCompiler/: CHTLCompiler.cpp  CHTLCompiler.h
CHTL/CHTLContext/: CHTLContext.cpp  CHTLContext.h  CHTLIOStream.cpp  CHTLIOStream.h  CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  Context.h  GlobalMap.cpp  GlobalMap.h  ImportManager.cpp  ImportManager.h  NamespaceManager.cpp  NamespaceManager.h  SelectorAutomation.cpp  SelectorAutomation.h
CHTL/CHTLGenerator/: CHTLGenerator.cpp  CHTLGenerator.h  CMakeLists.txt
CHTL/CHTLJS/: CHTLJSCompiler.cpp  CHTLJSCompiler.h  CHTLJSContext.cpp  CHTLJSContext.h  CHTLJSGenerator.cpp  CHTLJSGenerator.h  CHTLJSNode.cpp  CHTLJSNode.h  CHTLJSParser.cpp  CHTLJSParser.h  CHTLJSState.cpp  CHTLJSState.h  CMakeLists.txt
CHTL/CHTLJSCompiler/: CHTLJSCompiler.h
CHTL/CHTLLexer/: CHTLGlobalMap.cpp  CHTLGlobalMap.h  CHTLLexer.cpp  CHTLLexer.h  CHTLToken.cpp  CHTLToken.h  CMakeLists.txt  GlobalMap.cpp  GlobalMap.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
CHTL/CHTLLoader/: CHTLLoader.cpp  CHTLLoader.h  CMakeLists.txt
CHTL/CHTLManage/: ARCHITECTURE.md  CHTLGlobalMap.cpp  CHTLGlobalMap.h  CHTLManager.cpp  CHTLManager.h  CMakeLists.txt  ConfigManager.h  DependencyManager.h  ImportManager.h  InheritanceManager.h  LocalBlockManager.h  NamespaceManager.h  PathManager.h  SelectorManager.h  SymbolManager.h  TODO_IMPLEMENTATION.md
CHTL/CHTLNode/: ASTNode.h  ASTVisitor.h  AST_SUMMARY.md  BaseNode.h  BasicNodes.h  CHTLJSNodes.h  CHTLNode.cpp  CHTLNode.h  CHTLNodes.h  CMakeLists.txt  ElementNodes.h  NODE_SUMMARY.md  Node.h  SystemNodes.h  TemplateNodes.h  Visitor.h
CHTL/CHTLParser/: CHTLParser.cpp  CHTLParser.h  CMakeLists.txt  ConstraintParser.cpp  ConstraintParser.h  UseStatementParser.cpp  UseStatementParser.h
CHTL/CHTLState/: CHTLState.cpp  CHTLState.h  CMakeLists.txt  State.h
CHTL/CMODSystem/: CMODSystem.h  CMakeLists.txt
CHTL/CSS/: CMakeLists.txt  CSSCompiler.cpp  CSSCompiler.h  css3Parser.h  css3ParserBaseListener.h  css3ParserListener.cpp  css3ParserListener.h
CHTL/CompilerDispatcher/: CMakeLists.txt  CompilerDispatcher.cpp  CompilerDispatcher.h  CompilerDispatcher.hpp
CHTL/Core/: CJMODRegistry.h  UnifiedCompiler.h
CHTL/JS/: CMakeLists.txt  JSCompiler.cpp  JSCompiler.h  JavaScriptLexer.h  JavaScriptParser.cpp  JavaScriptParser.h  JavaScriptParserListener.cpp
CHTL/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h  Scanner.hpp
CHTL/Test/: CMakeLists.txt  SimpleTestMain.cpp  TestLexer.cpp  TestMain.cpp  test_chtl_features.cpp  test_chtljs_lexer.cpp  test_lexer.cpp  test_main.cpp  test_scanner.cpp  test_unquoted_literals.cpp
CHTL/Util/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
CSS/: CMakeLists.txt
CompilerDispatcher/: CMakeLists.txt  CompilerDispatcher.cpp  CompilerDispatcher.h
JS/: CMakeLists.txt
Module/: CMakeLists.txt
Scanner/: CHTLUnifiedScanner.cpp  CHTLUnifiedScanner.h  CMakeLists.txt
Test/: ASTGraph.cpp  ASTGraph.h  ASTPrint.cpp  ASTPrint.h  ASTVisitor.h  CMakeLists.txt  CMakeLists_debug.txt  ConfigurationInfo.cpp  ConfigurationInfo.h  TokenPrint.cpp  TokenPrint.h  UtilTest.cpp  chtljs_context_test.cpp  configuration_manager_test.cpp  constraint_parser_test.cpp  debug_selector_test.cpp  debug_simple_test.cpp  debug_test.cpp  generator_test.cpp  import_manager_test.cpp  io_stream_test.cpp  main.cpp  namespace_manager_test.cpp  selector_automation_test.cpp  simple_test.cpp  use_statement_test.cpp  zip_util_test.cpp
Util/: CMakeLists.txt  FileStream.cpp  FileStream.h  ZipUtil.cpp  ZipUtil.h
src/: CMakeLists.txt  CMakeLists_simple.txt  Main.cpp  README.md  main.cpp
src_new/: CMakeLists.txt  CMakeLists_complete.txt  CMakeLists_final.txt  CMakeLists_simple.txt  complex_website_compiler.cpp  comprehensive_test.cpp  final_verification  final_verification.cpp  main.cpp  simple_complex_test.cpp  simple_verification  simple_verification.cpp  test_antlr_integration.cpp  test_antlr_libraries.cpp  test_complete_chtl_implementation.cpp  test_complete_implementation  test_standard_structure.cpp  test_suite.cpp
(+1066 files in other folders)
